--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -33,10 +33,10 @@ Table Of Contents:
 /*****************************************
 Colors:
 
-- Backgrounds - light gray #fbfbfb
+- Backgrounds - light gray#454140   -
 - Background - dark blue #153e52
-- Backgrounds navbar, footer - dark gray #113448
-- Buttons, bullets, icons - green #14bf98
+- Backgrounds navbar, footer - dark gray #454140  #454140
+- Buttons, bullets, icons - green#a79e84      #7a3b2e/#a79e84
 - Headings text - black #484a46
 - Body text - gray #787976
 - Body text - light gray #dfe5ec
@@ -53,7 +53,7 @@ html {
 }
 
 body, p {
-	color: #787976; 
+	color: #787976;
 	font: 400 1rem/1.5625rem "Open Sans", sans-serif;
 }
 
@@ -119,7 +119,7 @@ a:hover {
 }
 
 a.green {
-	color: #14bf98;
+	color:#a79e84;
 }
 
 a.white,
@@ -140,16 +140,16 @@ strong {
 }
 
 .section-title {
-	color: #14bf98;
+	color:#a79e84;
 	font: 500 0.8125rem/1.125rem "Montserrat", sans-serif;
 }
 
 .btn-solid-reg {
 	display: inline-block;
 	padding: 1.1875rem 1.875rem 1.1875rem 1.875rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid#a79e84;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color:#a79e84;
 	color: #fff;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
@@ -158,16 +158,16 @@ strong {
 
 .btn-solid-reg:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color:#a79e84;
 	text-decoration: none;
 }
 
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.375rem 2.125rem 1.375rem 2.125rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid#a79e84;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color:#a79e84;
 	color: #fff;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
@@ -176,7 +176,7 @@ strong {
 
 .btn-solid-lg:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color:#a79e84;
 	text-decoration: none;
 }
 
@@ -259,7 +259,7 @@ strong {
 }
 
 /* IE10+ hack to solve lower label text position compared to the rest of the browsers */
-@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {  
+@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
 	.label-control {
 		top: 0.9375rem;
 	}
@@ -298,7 +298,7 @@ strong {
 }
 
 /* IE10+ hack to solve lower label text position compared to the rest of the browsers */
-@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {  
+@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
 	.form-control-input {
 		padding-top: 1rem;
 		padding-bottom: 0.5rem;
@@ -367,7 +367,7 @@ input[type='checkbox'] {
 }
 
 /* IE10+ hack to raise checkbox field position compared to the rest of the browsers */
-@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {  
+@media screen and (-ms-high-contrast: active), screen and (-ms-high-contrast: none) {
 	input[type='checkbox'] {
 		vertical-align: -9%;
 	}
@@ -377,21 +377,21 @@ input[type='checkbox'] {
 	display: inline-block;
 	width: 100%;
 	height: 3.125rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid#a79e84;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color:#a79e84;
 	color: #fff;
 	font: 700 0.75rem/1.75rem "Montserrat", sans-serif;
 	cursor: pointer;
 	transition: all 0.2s;
 	text-align:center;
 	padding-top:0.5rem
-	
+
 }
 
 .form-control-submit-button:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color:#a79e84;
 }
 
 /* Form Success And Error Message Formatting */
@@ -502,17 +502,17 @@ input[type='checkbox'] {
 /* animate in */
 .my-mfp-slide-bottom.mfp-ready .zoom-anim-dialog {
 	opacity: 1;
-	-webkit-transform: translateY(0) perspective(37.5rem) rotateX(0); 
-	-ms-transform: translateY(0) perspective(37.5rem) rotateX(0); 
-	transform: translateY(0) perspective(37.5rem) rotateX(0); 
+	-webkit-transform: translateY(0) perspective(37.5rem) rotateX(0);
+	-ms-transform: translateY(0) perspective(37.5rem) rotateX(0);
+	transform: translateY(0) perspective(37.5rem) rotateX(0);
 }
 
 /* animate out */
 .my-mfp-slide-bottom.mfp-removing .zoom-anim-dialog {
 	opacity: 0;
-	-webkit-transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg); 
-	-ms-transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg); 
-	transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg); 
+	-webkit-transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg);
+	-ms-transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg);
+	transform: translateY(-0.625rem) perspective(37.5rem) rotateX(10deg);
 }
 
 /* dark overlay, start state */
@@ -599,7 +599,7 @@ input[type='checkbox'] {
 	left: 50%; /* centers the loading animation horizontally one the screen */
 	width: 3.75rem;
 	height: 1.25rem;
-	margin: -0.625rem 0 0 -1.875rem; /* is width and height divided by two */ 
+	margin: -0.625rem 0 0 -1.875rem; /* is width and height divided by two */
 	text-align: center;
 }
 
@@ -629,11 +629,11 @@ input[type='checkbox'] {
 }
 
 @keyframes sk-bouncedelay {
-	0%, 80%, 100% { 
+	0%, 80%, 100% {
 		-webkit-transform: scale(0);
 		-ms-transform: scale(0);
 		transform: scale(0);
-	} 40% { 
+	} 40% {
 		-webkit-transform: scale(1.0);
 		-ms-transform: scale(1.0);
 		transform: scale(1.0);
@@ -685,7 +685,7 @@ input[type='checkbox'] {
 
 .navbar-custom .nav-item .nav-link:hover,
 .navbar-custom .nav-item .nav-link.active {
-	color: #14bf98;
+	color:#a79e84;
 }
 
 /* Dropdown Menu */
@@ -730,7 +730,7 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .dropdown-item:hover .item-text {
-	color: #14bf98;
+	color:#a79e84;
 }
 
 .navbar-custom .dropdown-items-divide-hr {
@@ -775,7 +775,7 @@ input[type='checkbox'] {
 /*    04. Header     */
 /*********************/
 .header {
-	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/header-background.jpg') center center no-repeat;
+	background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.5)), url('../images/love.jpg') center center no-repeat;
 	background-size: cover;
 }
 
@@ -845,7 +845,7 @@ input[type='checkbox'] {
 	-moz-transform: scale(1.15);
 	-webkit-transform: scale(1.15);
 	transform: scale(1.15);
-} 
+}
 /* end of hover animation */
 
 
@@ -899,8 +899,8 @@ input[type='checkbox'] {
 /*     07. Services     */
 /************************/
 .cards-2 {
-	padding-top: 6.625rem;	
-	padding-bottom: 1.25rem;	
+	padding-top: 6.625rem;
+	padding-bottom: 1.25rem;
 	background-color: #fbfbfb;
 }
 
@@ -923,7 +923,7 @@ input[type='checkbox'] {
 .cards-2 .card-image img {
 	border-top-left-radius: 0.375rem;
 	border-top-right-radius: 0.375rem;
-	
+
 }
 
 .cards-2 .card-body {
@@ -944,7 +944,7 @@ input[type='checkbox'] {
 }
 
 .cards-2 .list-unstyled .fas {
-	color: #14bf98;
+	color:#a79e84;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -961,7 +961,7 @@ input[type='checkbox'] {
 }
 
 .cards-2 .price span {
-	color: #14bf98;
+	color:#a79e84;
 }
 
 .cards-2 .button-container {
@@ -1009,9 +1009,9 @@ input[type='checkbox'] {
 	width: 2.25rem;
 	height: 2.25rem;
 	margin-right: 0.875rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid#a79e84;
 	border-radius: 50%;
-	background-color: #14bf98;
+	background-color:#a79e84;
 	color: #fff;
 	font: 700 1rem/2.125rem "Montserrat", sans-serif;
 	text-align: center;
@@ -1027,8 +1027,8 @@ input[type='checkbox'] {
 }
 
 .accordion .item:hover span[aria-expanded="false"] .circle-numbering {
-	border: 0.125rem solid #14bf98;
-	color: #14bf98;
+	border: 0.125rem solid#a79e84;
+	color:#a79e84;
 }
 
 .accordion .accordion-title {
@@ -1044,11 +1044,11 @@ input[type='checkbox'] {
 }
 
 .accordion .item:hover .accordion-title {
-	color: #14bf98;
+	color:#a79e84;
 }
 
 .accordion span[aria-expanded="true"] .accordion-title {
-	color: #14bf98;
+	color:#a79e84;
 }
 
 .accordion .accordion-body {
@@ -1087,7 +1087,7 @@ input[type='checkbox'] {
 
 .tabs .nav-link:hover,
 .tabs .nav-link.active {
-	color: #14bf98;
+	color:#a79e84;
 }
 
 .tabs .nav-link .fas {
@@ -1117,7 +1117,7 @@ input[type='checkbox'] {
 	display: block;
 	padding-left: 1.5rem;
 	border-radius: 0.125rem;
-	background: linear-gradient(to bottom right, #14bf98, #1bd1a7);
+	background: linear-gradient(to bottom right,#a79e84, #1bd1a7);
 }
 
 .tabs #tab-1 .progress-bar.first {
@@ -1143,7 +1143,7 @@ input[type='checkbox'] {
 }
 
 .tabs #tab-2 .list-unstyled .media-bullet {
-	color: #14bf98;
+	color:#a79e84;
 	font-weight: 600;
 	font-size: 2rem;
 	line-height: 2rem;
@@ -1154,7 +1154,7 @@ input[type='checkbox'] {
 }
 
 .tabs #tab-3 .list-unstyled .fas {
-	color: #14bf98;
+	color:#a79e84;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1248,8 +1248,8 @@ input[type='checkbox'] {
 /*     11. Call Me    */
 /**********************/
 .form-1 {
-	padding-top: 6.625rem;	
-	padding-bottom: 5.625rem;	
+	padding-top: 6.625rem;
+	padding-bottom: 5.625rem;
 	background-color: #153e52;
 }
 
@@ -1267,7 +1267,7 @@ input[type='checkbox'] {
 }
 
 .form-1 .list-unstyled .fas {
-	color: #14bf98;
+	color:#a79e84;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1352,12 +1352,12 @@ input[type='checkbox'] {
 }
 
 .filter .button-group a:hover {
-	background-color: #14bf98;
+	background-color:#a79e84;
 	color: #fff;
 }
 
 .filter .button-group a.button.is-checked {
-	background-color: #14bf98;
+	background-color:#a79e84;
 	color: #fff;
 }
 
@@ -1385,10 +1385,10 @@ input[type='checkbox'] {
 	-moz-transform: scale(1.15);
 	-webkit-transform: scale(1.15);
 	transform: scale(1.15);
-} 
+}
 /* end of hover animation */
 
-.filter .element-item .element-item-overlay { 
+.filter .element-item .element-item-overlay {
 	position: absolute;
 	z-index: 2;
 	top: 0;
@@ -1401,7 +1401,7 @@ input[type='checkbox'] {
 	transition: all 0.3s;
 }
 
-.filter .element-item .element-item-overlay span { 
+.filter .element-item .element-item-overlay span {
 	position: absolute;
 	z-index: 3;
 	top: 42%;
@@ -1439,7 +1439,7 @@ input[type='checkbox'] {
 	margin-bottom: 0.625rem;
 	margin-left: 0;
 	border: none;
-	background-color: #14bf98;
+	background-color:#a79e84;
 }
 
 .lightbox-basic h6 {
@@ -1527,7 +1527,7 @@ input[type='checkbox'] {
 	-moz-transform: scale(1.15);
 	-webkit-transform: scale(1.15);
 	transform: scale(1.15);
-} 
+}
 /* end of hover animation */
 
 .basic-2 .team-member .p-large {
@@ -1570,7 +1570,7 @@ input[type='checkbox'] {
 }
 
 .basic-2 .fa-stack:hover .fa-stack-1x {
-	color: #14bf98;
+	color:#a79e84;
 }
 
 
@@ -1603,7 +1603,7 @@ input[type='checkbox'] {
 }
 
 .counter .list-unstyled .fas {
-	color: #14bf98;
+	color:#a79e84;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1625,7 +1625,7 @@ input[type='checkbox'] {
 .counter #counter .counter-value {
 	display: inline-block;
 	margin-bottom: 0.125rem;
-	color: #14bf98;
+	color:#a79e84;
 	font: 700 2.875rem/3.25rem "Montserrat", sans-serif;
 	vertical-align: middle;
 }
@@ -1670,7 +1670,7 @@ input[type='checkbox'] {
 .form-2 .list-unstyled .fab {
 	margin-right: 0.5rem;
 	font-size: 0.875rem;
-	color: #14bf98;
+	color:#a79e84;
 }
 
 .form-2 .list-unstyled .fa-phone {
@@ -1711,7 +1711,7 @@ input[type='checkbox'] {
 }
 
 .form-2 .fa-stack:hover .fa-stack-1x {
-	color: #14bf98;
+	color:#a79e84;
 }
 
 
@@ -1720,7 +1720,7 @@ input[type='checkbox'] {
 /**********************/
 .footer {
 	padding-top: 5rem;
-	background-color: #113448;
+	background-color: #454140;
 }
 
 .footer .text-container {
@@ -1768,13 +1768,13 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #14bf98 url("../images/up-arrow.png") no-repeat center 47%;
+	background:#a79e84 url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
 
 a:hover.back-to-top {
-	background-color: #13aa87; 
+	background-color: #13aa87;
 }
 
 
@@ -1784,7 +1784,7 @@ a:hover.back-to-top {
 .ex-header {
 	padding-top: 5rem;
 	padding-bottom: 2rem;
-	background-color: #153e52;
+	background-color: #454140;
 	text-align: center;
 }
 
@@ -1824,7 +1824,7 @@ a:hover.back-to-top {
 }
 
 .ex-basic-2 .list-unstyled .fas {
-	color: #14bf98;
+	color:#a79e84;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1844,10 +1844,10 @@ a:hover.back-to-top {
 
 /*****************************/
 /*     21. Media Queries     */
-/*****************************/	
+/*****************************/
 /* Min-width width 768px */
 @media (min-width: 768px) {
-	
+
 	/* General Styles */
 	.p-heading {
 		width: 85%;
@@ -1863,7 +1863,7 @@ a:hover.back-to-top {
 		box-shadow: none;
         background: transparent;
 	}
-	
+
 	.navbar-custom .navbar-brand.logo-text {
 		color: #fff;
 	}
@@ -1876,10 +1876,10 @@ a:hover.back-to-top {
 	.navbar-custom .nav-item .nav-link {
 		padding: 0.25rem 0.75rem 0.25rem 0.75rem;
 	}
-	
+
 	.navbar-custom .nav-item .nav-link:hover,
 	.navbar-custom .nav-item .nav-link.active {
-		color: #14bf98;
+		color:#454140;
 	}
 
 	.navbar-custom.top-nav-collapse {
@@ -1895,10 +1895,10 @@ a:hover.back-to-top {
 	.navbar-custom.top-nav-collapse .nav-item .nav-link {
 		color: #fff;
 	}
-	
+
 	.navbar-custom.top-nav-collapse .nav-item .nav-link:hover,
 	.navbar-custom.top-nav-collapse .nav-item .nav-link.active {
-		color: #14bf98;
+		color:#454140;
 	}
 
 	.navbar-custom .dropdown-menu {
@@ -1908,7 +1908,7 @@ a:hover.back-to-top {
 		border-radius: 0.25rem;
 		box-shadow: 0 0.25rem 0.375rem 0 rgba(0, 0, 0, 0.03);
 	}
-	
+
 	.navbar-custom.top-nav-collapse .dropdown-menu {
 		border-top: 0.125rem solid rgba(0, 0, 0, 0);
 	}
@@ -1953,7 +1953,7 @@ a:hover.back-to-top {
 		width: 45%;
 		margin-top: 0;
 	}
-	
+
 	.tabs #tab-2 .list-unstyled.first {
 		margin-right: 2rem;
 	}
@@ -1966,7 +1966,7 @@ a:hover.back-to-top {
 		width: 1.375rem;
 		background-size: 1.375rem 2.125rem;
 	}
-	
+
 	.slider .swiper-button-next {
 		right: 1rem;
 		width: 1.375rem;
@@ -1976,11 +1976,11 @@ a:hover.back-to-top {
 
 
 	/* Projects */
-	.filter .element-item { 
-		width: 25%; 
+	.filter .element-item {
+		width: 25%;
 	}
-	
-	.filter .element-item .element-item-overlay { 
+
+	.filter .element-item .element-item-overlay {
 		opacity: 0;
 		transition: opacity 0.3s ease;
 	}
@@ -2029,7 +2029,7 @@ a:hover.back-to-top {
 
 /* Min-width width 992px */
 @media (min-width: 992px) {
-	
+
 	/* General Styles */
 	.p-heading {
 		width: 65%;
@@ -2061,7 +2061,7 @@ a:hover.back-to-top {
 		background: url('../images/hexagon-white.svg') center center no-repeat;
 		background-size: 1.625rem 1.625rem;
 	}
-	
+
 	.navbar-custom .fa-stack-1x {
 		font-size: 0.6875rem;
 		line-height: 1.625rem;
@@ -2070,7 +2070,7 @@ a:hover.back-to-top {
 	}
 
 	.navbar-custom .fa-stack:hover .fa-stack-1x {
-		color: #14bf98;
+		color:#a79e84;
 	}
 	/* end of navigation */
 
@@ -2105,7 +2105,7 @@ a:hover.back-to-top {
 		text-align: left;
 		vertical-align: top;
 	}
-	
+
 	.cards-1 div.card:nth-child(3n+2) {
 		margin-right: 2.5rem;
 		margin-left: 2.5rem;
@@ -2131,20 +2131,20 @@ a:hover.back-to-top {
 	.accordion {
 		height: 34.625rem;
 	}
-	
+
 	.accordion .area-1 {
 		width: 50%;
 		height: 100%;
 		display: inline-block;
 	}
-	
+
 	.accordion .area-2 {
 		width: 50%;
 		height: 100%;
 		display: inline-block;
 		vertical-align: top;
 	}
-	
+
 	.accordion .accordion-container {
 		max-width: 88%;
 		margin-left: 2rem;
@@ -2190,7 +2190,7 @@ a:hover.back-to-top {
 
 	/* Call Me */
 	.form-1 {
-		padding-top: 7rem;	
+		padding-top: 7rem;
 	}
 
 	.form-1 .text-container {
@@ -2203,7 +2203,7 @@ a:hover.back-to-top {
 	.lightbox-basic img {
 		margin-bottom: 0;
 	}
-	
+
 	.lightbox-basic h3 {
 		margin-top: 0.375rem;
 	}
@@ -2260,7 +2260,7 @@ a:hover.back-to-top {
 
 /* Min-width width 1200px */
 @media (min-width: 1200px) {
-	
+
 	/* General Styles */
 	.p-heading {
 		width: 55%;
@@ -2280,7 +2280,7 @@ a:hover.back-to-top {
 	}
 	/* end of navigation */
 
-	
+
 	/* Header */
 	.header .header-content {
 		padding-top: 14.75rem;
@@ -2366,7 +2366,7 @@ a:hover.back-to-top {
 		height: 16.875rem;
 	}
 
-	.filter .element-item .element-item-overlay span { 
+	.filter .element-item .element-item-overlay span {
 		top: 45%;
 	}
 	/* end of projects */
@@ -2396,8 +2396,8 @@ a:hover.back-to-top {
 		margin-left: 2rem;
 	}
 	/* end of about */
-	
-	
+
+
 	/* Contact */
 	.form-2 .text-container {
 		margin-top: 0.875rem;
@@ -2434,7 +2434,7 @@ a:hover.back-to-top {
 
 /* Min-width width 1600px */
 @media (min-width: 1600px) {
-	
+
 	/* Navigation */
 	.navbar-custom {
 		padding-right: 12rem;
