Contact deleted and joint application removed

--- a/templates/index.html
+++ b/templates/index.html
@@ -68,9 +68,7 @@
                 <li class="nav-item">
                     <a class="nav-link page-scroll" href="#Insights">INSIGHTS</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link page-scroll" href="#contact">CONTACT</a>
-                </li>
+
             </ul>
 
         </div>
@@ -88,7 +86,7 @@
                             <h1>Lending Data <span id="js-rotating"> Analysis, Prediction, Visualization</span></h1>
                             <p class="p-heading p-large"></p>
                             <a class="btn-solid-lg page-scroll" href="#Predict">Predict Approval</a>
-							<a class="btn-solid-lg page-scroll" href="#Visualize">Visualize Data</a>
+							              <a class="btn-solid-lg page-scroll" href="#Visualize">Visualize Data</a>
 
                         </div>
                     </div> <!-- end of col -->
@@ -158,7 +156,7 @@
 				 <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h3>Are you looking for a Individual Loan or a Joint Loan?</h3>
+                        <h3>Are you looking for a Individual Loan?</h3>
                     </div>
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
@@ -168,9 +166,7 @@
                         <div class="form-group">
 							<a type="submit" class="form-control-submit-button" href="Individual">Individual</a>
                         </div>
-						<div class="form-group">
-							<a type="submit" class="form-control-submit-button" href="Joint">Joint</a>
-                        </div>
+
 
                     </form>
                     <!-- end of call me form -->
@@ -276,69 +272,19 @@
     <!-- end of about -->
 
     <!-- Footer -->
-    <div id=contact class="footer">
-        <div class="container">
-            <div class="row">
-			<img class="card-image" src="{{url_for('static', filename='images/kunal.png')}}"  width="150" height="150" alt="alternative">
 
-                <div class="col-md-6">
-                    <div class="text-container about">
-                        <h4>Developed by:</h4>
-                        <h2 class="white">Kunal Goyal</h2>
-						<p class="white">Masters Student at National University of Ireland, Maynooth.</p>
-						<p class="white">Email: kunal.goyal.2020@mumail.ie </p>
-
-					</div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">
-                        <h4>Connect</h4>
-                        <ul class="list-unstyled li-space-lg white">
-                            <li>
-                                <a class="white" href="https://www.linkedin.com/in/kunal4g/">LinkedIn</a>
-                            </li>
-                            <li>
-                                <a class="white" href="https://github.com/ikunal95">Github</a>
-                            </li>
-                            <li>
-                                <a class="white" href="https://www.kaggle.com/ikunal4g">Kaggle</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-                <div class="col-md-2">
-                    <div class="text-container">
-                        <h4>Tools Used</h4>
-                        <ul class="list-unstyled li-space-lg">
-                            <li>
-                                <a class="white" href="https://www.ichec.ie/about/infrastructure/kay">ICHEC Kay</a>
-                            </li>
-                            <li>
-                               <a class="white" href="https://public.tableau.com/profile/kunal.goyal#!/vizhome/lendingclub_15949916461750/Dashboard1">Tableau</a>
-                            </li>
-                            <li class="media">
-                                <a class="white" href="https://www.lendingclub.com/info/statistics.action">Lending Club</a>
-                            </li>
-                        </ul>
-                    </div> <!-- end of text-container -->
-                </div> <!-- end of col -->
-
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of footer -->
-    <!-- end of footer -->
 
 
 
     <!-- Scripts -->
-    <script src="{{url_for('static', filename='js/jquery.min.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-	<script src="{{url_for('static', filename='js/popper.min.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="{{url_for('static', filename='js/jquery.easing.min.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="{{url_for('static', filename='js/jquery.magnific-popup.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="{{url_for('static', filename='js/morphext.min.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="{{url_for('static', filename='js/isotope.pkgd.min.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-    <script src="{{url_for('static', filename='js/validator.min.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
-	<script src="{{url_for('static', filename='js/scripts.js')}}"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="../static/js/jquery.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+	  <script src="../static/js/popper.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="../static/js/bootstrap.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="../static/js/jquery.easing.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="../static/js/jquery.magnific-popup.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="../static/js/morphext.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="../static/js/isotope.pkgd.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+    <script src="../static/js/validator.min.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
+	  <script src="../static/js/scripts.js"></script> <!-- jQuery for Bootstrap's JavaScript plugins -->
 </body>
 </html>
