--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,12 @@
 	<meta property="og:type" content="article" />
 
     <!-- Website Title -->
-    <title>Lending Club Analysis</title>
+    <title>Bank Lending Predictor</title>
 
     <!-- Styles -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600&display=swap&subset=latin-ext" rel="stylesheet">
-	<link href="../static/css/styles.css" rel="stylesheet">
+  	<link href="../static/css/styles.css" rel="stylesheet">
     <link href="../static/css/fontawesome-all.css" rel="stylesheet">
     <link href="../static/css/swiper.css" rel="stylesheet">
     <link href="../static/css/magnific-popup.css" rel="stylesheet">
@@ -33,7 +33,7 @@
 
 
 	<!-- Favicon  -->
-    <link rel="icon" href="{{url_for('static', filename='images/logo.svg')}}">
+    <link rel="icon" href="../static/images/logo.svg')}}">
 </head>
 <body data-spy="scroll" data-target=".fixed-top">
 
@@ -83,7 +83,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="text-container">
-                            <h1>Lending Data <span id="js-rotating"> Analysis, Prediction, Visualization</span></h1>
+                            <h1>Bank Lending <span id="js-rotating"> Analysis, Prediction, Visualization</span></h1>
                             <p class="p-heading p-large"></p>
                             <a class="btn-solid-lg page-scroll" href="#Predict">Predict Approval</a>
 							              <a class="btn-solid-lg page-scroll" href="#Visualize">Visualize Data</a>
@@ -164,7 +164,7 @@
                     <!-- Call Me Form -->
                     <form id="callMeForm" data-toggle="validator" data-focus="false">
                         <div class="form-group">
-							<a type="submit" class="form-control-submit-button" href="Individual">Individual</a>
+							<a type="submit" class="form-control-submit-button" href="./Individual.html">Individual</a>
                         </div>
 
 
