--- a/templates/index.html
+++ b/templates/index.html
@@ -156,7 +156,7 @@
 				 <div class="row">
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h3>Are you looking for a Individual Loan?</h3>
+                        <h3>Are you looking for a Loan?</h3>
                     </div>
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
@@ -164,7 +164,7 @@
                     <!-- Call Me Form -->
                     <form id="callMeForm" data-toggle="validator" data-focus="false">
                         <div class="form-group">
-							<a type="submit" class="form-control-submit-button" href="./Individual.html">Individual</a>
+							<a type="submit" class="form-control-submit-button" href="./Individual.html">Make Prediction</a>
                         </div>
 
 
